# WEMARS_WebRTC

./: CMakeLists.txt  README.md
Cpp_Server/include/camera/: CameraManager.hpp  CameraSource.hpp  OakDLiteSource.hpp
Cpp_Server/include/encoder/: Encoder.hpp
Cpp_Server/include/frame/: PixelFormat.hpp  RawFrame.hpp
Cpp_Server/include/logging/: logger.hpp
Cpp_Server/include/signalling/: PeerSession.hpp  SignallingServer.hpp
Cpp_Server/src/: main.cpp
Cpp_Server/src/camera/: OakDLiteSource.cpp
Cpp_Server/src/encoder/: Encoder.cpp
Cpp_Server/src/signalling/: PeerSession.cpp  SignallingServer.cpp
React_Client/public/: index.html
React_Client/src/: App.js
